# wechat-dify

./: README.md  pyproject.toml  requirements.txt
src/: main.py
src/common/: logger_handler.py  sessions_manger.py  utils.py
src/config/: global_vars.py
src/handler/: handle.py  http_manager.py  wechat_handle.py
