[project]
name = "wechat-dify"
version = "0.1.5"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.11",
    "cachetools>=6.0.0",
    "mypy>=1.16.1",
    "requests>=2.32.3",
    "wxauto==39.1.12",
]

[dependency-groups]
dev = [
    "ruff>=0.12.2",
]
